// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput renders 1`] = `
.c1 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c1:focus {
  outline: 0;
}

.c0 {
  min-height: 32px;
  font-size: 14px;
  line-height: 20px;
  color: #24292f;
  vertical-align: middle;
  background-color: #ffffff;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-left: 0;
  padding-right: 0;
}

.c0 >:not(:last-child) {
  margin-right: 8px;
}

.c0 > input {
  padding-left: 12px;
  padding-right: 12px;
}

.c0 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #57606a;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:focus-within {
  border-color: #0969da;
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
  className="c0 TextInput-wrapper"
>
  <input
    className="c1"
    data-component="input"
    name="zipcode"
    type="text"
  />
</span>
`;

exports[`TextInput renders block 1`] = `
.c1 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c1:focus {
  outline: 0;
}

.c0 {
  min-height: 32px;
  font-size: 14px;
  line-height: 20px;
  color: #24292f;
  vertical-align: middle;
  background-color: #ffffff;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-left: 0;
  padding-right: 0;
  width: 100%;
}

.c0 >:not(:last-child) {
  margin-right: 8px;
}

.c0 > input {
  padding-left: 12px;
  padding-right: 12px;
}

.c0 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #57606a;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:focus-within {
  border-color: #0969da;
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
  className="c0 TextInput-wrapper"
>
  <input
    className="c1"
    data-component="input"
    name="zipcode"
    type="text"
  />
</span>
`;

exports[`TextInput renders consistently 1`] = `
.c1 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c1:focus {
  outline: 0;
}

.c0 {
  min-height: 32px;
  font-size: 14px;
  line-height: 20px;
  color: #24292f;
  vertical-align: middle;
  background-color: #ffffff;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-left: 0;
  padding-right: 0;
}

.c0 >:not(:last-child) {
  margin-right: 8px;
}

.c0 > input {
  padding-left: 12px;
  padding-right: 12px;
}

.c0 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #57606a;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:focus-within {
  border-color: #0969da;
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
  className="c0 TextInput-wrapper"
>
  <input
    className="c1"
    data-component="input"
    type="text"
  />
</span>
`;

exports[`TextInput renders contrast 1`] = `
.c1 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c1:focus {
  outline: 0;
}

.c0 {
  min-height: 32px;
  font-size: 14px;
  line-height: 20px;
  color: #24292f;
  vertical-align: middle;
  background-color: #ffffff;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-left: 0;
  padding-right: 0;
}

.c0 >:not(:last-child) {
  margin-right: 8px;
}

.c0 > input {
  padding-left: 12px;
  padding-right: 12px;
}

.c0 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #57606a;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:focus-within {
  border-color: #0969da;
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
  className="c0 TextInput-wrapper"
>
  <input
    className="c1"
    data-component="input"
    name="zipcode"
    type="text"
  />
</span>
`;

exports[`TextInput renders error 1`] = `
.c1 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c1:focus {
  outline: 0;
}

.c0 {
  min-height: 32px;
  font-size: 14px;
  line-height: 20px;
  color: #24292f;
  vertical-align: middle;
  background-color: #ffffff;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-left: 0;
  padding-right: 0;
}

.c0 >:not(:last-child) {
  margin-right: 8px;
}

.c0 > input {
  padding-left: 12px;
  padding-right: 12px;
}

.c0 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #57606a;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:focus-within {
  border-color: #0969da;
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
  className="c0 TextInput-wrapper"
>
  <input
    className="c1"
    data-component="input"
    name="zipcode"
    type="text"
  />
</span>
`;

exports[`TextInput renders large 1`] = `
.c1 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c1:focus {
  outline: 0;
}

.c0 {
  min-height: 32px;
  font-size: 14px;
  line-height: 20px;
  color: #24292f;
  vertical-align: middle;
  background-color: #ffffff;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-left: 0;
  padding-right: 0;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 10px;
  padding-bottom: 10px;
  font-size: 20px;
}

.c0 >:not(:last-child) {
  margin-right: 8px;
}

.c0 > input {
  padding-left: 12px;
  padding-right: 12px;
}

.c0 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #57606a;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:focus-within {
  border-color: #0969da;
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
  className="c0 TextInput-wrapper"
  size="large"
>
  <input
    className="c1"
    data-component="input"
    name="zipcode"
    type="text"
  />
</span>
`;

exports[`TextInput renders leadingVisual 1`] = `
.c1 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c1:focus {
  outline: 0;
}

.c0 {
  min-height: 32px;
  font-size: 14px;
  line-height: 20px;
  color: #24292f;
  vertical-align: middle;
  background-color: #ffffff;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-left: 12px;
  padding-right: 0;
}

.c0 >:not(:last-child) {
  margin-right: 8px;
}

.c0 > input {
  padding-left: 0;
  padding-right: 12px;
}

.c0 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #57606a;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:focus-within {
  border-color: #0969da;
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
  className="c0 TextInput-wrapper"
>
  <span
    className="TextInput-icon"
  >
    <svg
      aria-hidden="true"
      className="octicon octicon-search"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<path fill-rule=\\"evenodd\\" d=\\"M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z\\"></path>",
        }
      }
      fill="currentColor"
      height={16}
      role="img"
      style={
        Object {
          "display": "inline-block",
          "overflow": "visible",
          "userSelect": "none",
          "verticalAlign": "text-bottom",
        }
      }
      viewBox="0 0 16 16"
      width={16}
    />
  </span>
  <input
    className="c1"
    data-component="input"
    name="search"
    placeholder="Search"
    type="text"
  />
</span>
`;

exports[`TextInput renders placeholder 1`] = `
.c1 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c1:focus {
  outline: 0;
}

.c0 {
  min-height: 32px;
  font-size: 14px;
  line-height: 20px;
  color: #24292f;
  vertical-align: middle;
  background-color: #ffffff;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-left: 0;
  padding-right: 0;
}

.c0 >:not(:last-child) {
  margin-right: 8px;
}

.c0 > input {
  padding-left: 12px;
  padding-right: 12px;
}

.c0 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #57606a;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:focus-within {
  border-color: #0969da;
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
  className="c0 TextInput-wrapper"
>
  <input
    className="c1"
    data-component="input"
    name="zipcode"
    placeholder="560076"
    type="text"
  />
</span>
`;

exports[`TextInput renders small 1`] = `
.c1 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c1:focus {
  outline: 0;
}

.c0 {
  min-height: 32px;
  font-size: 14px;
  line-height: 20px;
  color: #24292f;
  vertical-align: middle;
  background-color: #ffffff;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-left: 0;
  padding-right: 0;
  min-height: 28px;
  padding-left: 8px;
  padding-right: 8px;
  padding-top: 3px;
  padding-bottom: 3px;
  font-size: 12px;
  line-height: 20px;
}

.c0 >:not(:last-child) {
  margin-right: 8px;
}

.c0 > input {
  padding-left: 12px;
  padding-right: 12px;
}

.c0 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #57606a;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:focus-within {
  border-color: #0969da;
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
  className="c0 TextInput-wrapper"
  size="small"
>
  <input
    className="c1"
    data-component="input"
    name="zipcode"
    type="text"
  />
</span>
`;

exports[`TextInput renders trailingVisual 1`] = `
.c1 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c1:focus {
  outline: 0;
}

.c0 {
  min-height: 32px;
  font-size: 14px;
  line-height: 20px;
  color: #24292f;
  vertical-align: middle;
  background-color: #ffffff;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-left: 0;
  padding-right: 12px;
}

.c0 >:not(:last-child) {
  margin-right: 8px;
}

.c0 > input {
  padding-left: 12px;
  padding-right: 0;
}

.c0 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #57606a;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:focus-within {
  border-color: #0969da;
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
  className="c0 TextInput-wrapper"
>
  <input
    className="c1"
    data-component="input"
    name="search"
    placeholder="Search"
    type="text"
  />
  <span
    className="TextInput-icon"
  >
    <svg
      aria-hidden="true"
      className="octicon octicon-search"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<path fill-rule=\\"evenodd\\" d=\\"M11.5 7a4.499 4.499 0 11-8.998 0A4.499 4.499 0 0111.5 7zm-.82 4.74a6 6 0 111.06-1.06l3.04 3.04a.75.75 0 11-1.06 1.06l-3.04-3.04z\\"></path>",
        }
      }
      fill="currentColor"
      height={16}
      role="img"
      style={
        Object {
          "display": "inline-block",
          "overflow": "visible",
          "userSelect": "none",
          "verticalAlign": "text-bottom",
        }
      }
      viewBox="0 0 16 16"
      width={16}
    />
  </span>
</span>
`;

exports[`TextInput renders warning 1`] = `
.c1 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c1:focus {
  outline: 0;
}

.c0 {
  min-height: 32px;
  font-size: 14px;
  line-height: 20px;
  color: #24292f;
  vertical-align: middle;
  background-color: #ffffff;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-left: 0;
  padding-right: 0;
}

.c0 >:not(:last-child) {
  margin-right: 8px;
}

.c0 > input {
  padding-left: 12px;
  padding-right: 12px;
}

.c0 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #57606a;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:focus-within {
  border-color: #0969da;
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
  className="c0 TextInput-wrapper"
>
  <input
    className="c1"
    data-component="input"
    name="zipcode"
    type="text"
  />
</span>
`;

exports[`TextInput should render a password input 1`] = `
.c1 {
  border: 0;
  font-size: inherit;
  font-family: inherit;
  background-color: transparent;
  -webkit-appearance: none;
  color: inherit;
  width: 100%;
}

.c1:focus {
  outline: 0;
}

.c0 {
  min-height: 32px;
  font-size: 14px;
  line-height: 20px;
  color: #24292f;
  vertical-align: middle;
  background-color: #ffffff;
  background-repeat: no-repeat;
  background-position: right 8px center;
  border: 1px solid #d0d7de;
  border-radius: 6px;
  outline: none;
  box-shadow: inset 0 1px 0 rgba(208,215,222,0.2);
  cursor: text;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  padding-left: 0;
  padding-right: 0;
}

.c0 >:not(:last-child) {
  margin-right: 8px;
}

.c0 > input {
  padding-left: 12px;
  padding-right: 12px;
}

.c0 .TextInput-icon {
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  color: #57606a;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
}

.c0:focus-within {
  border-color: #0969da;
  box-shadow: 0 0 0 3px rgba(9,105,218,0.3);
}

@media (min-width:768px) {
  .c0 {
    font-size: 14px;
  }
}

<span
  className="c0 TextInput-wrapper"
>
  <input
    className="c1"
    data-component="input"
    name="password"
    type="password"
  />
</span>
`;
